FIX: Prevent Next Read from Jumping

--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -13,6 +13,9 @@
 		padding: remify(12px $page-padding 32px)
 	&__media
 		margin: 0
+		height: 0
+		padding-bottom: 100% / 21 * 9
+		background-color: $black
 	&__heading
 		@extend %teaser-heading
 		margin-bottom: remify(10px)
